--- a/index.html
+++ b/index.html
@@ -295,7 +295,73 @@
             <button class="sample__content--button">Order a free sample</button>
         </div>
     </section>
-
+    <section class="contact">
+        <div class="row">
+           <div class="contact__form">
+            <div class="col-1-of-2  contact__form--label">
+                Sign up to the Cherrywine for special offers, news and inspiration.
+            </div>
+            <div class="col-1-of-2">
+                <input type="text" class="contact__form--input" placeholder="example@eamil.com">
+            </div>
+           </div>
+        </div>
+    </section>
+    <section class="social">
+        <div class="row col-sm-12 col-md-12">
+           <span><i class="fab fa-facebook-f"></i></span>
+           <span><i class="far fa-envelope"></i></span>
+           <span><i class="fab fa-instagram"></i></span>
+           <span><i class="fab fa-twitter"></i></span>
+           <span> <i class="fas fa-phone"></i></span>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="row">
+            <div class="footer__content">
+                    <div class="col-1-of-4">
+                        <h3>Products</h3>
+                           <ul>
+                              <li>  All Products</li>
+                                <li> Business Cards</li>  
+                                <li>Square Business Cards</li>
+                                <li>Letterpress Business Cards</li>
+                               
+                           </ul>
+                    </div>
+                    <div class="col-1-of-4">
+                            <h3>Stocks</h3>
+                            <ul>
+                                <li>Square Business Cards</li>
+                                 <li>Letterpress Business Cards</li>
+                                 <li>Luxe by MOO</li>
+                                 <li>MiniCards</li>   
+                                 <li>Flyers</li> 
+                            </ul>
+                     </div>
+                     <div class="col-1-of-4">
+                            <h3>About company</h3>
+                            <ul>
+                               <li>  All Products</li>
+                                 <li> Business Cards</li>  
+                                 <li>Square Business Cards</li>
+                                 <li>Flyers</li> 
+                            </ul>
+                     </div>
+                     <div class="col-1-of-4">
+                            <h3>Help and Supports</h3>
+                            <ul>
+                               <li>  All Products</li>
+                                 <li>Letterpress Business Cards</li>
+                                 <li>Luxe by MOO</li>
+                                 <li>MiniCards</li>   
+                                 <li>Flyers</li> 
+                            </ul>
+                     </div>
+                     
+            </div>        
+        </div>
+    </footer>
 
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
